# emager-py

./: .gitignore  .pdm-python  LICENSE  README.md  data_processing.py  emager_data_generator.py  emager_dataset.py  emager_utils.py  pyproject.toml  quantization.py  requirements.txt  streamers.py  transforms.py  visualize.py
emager_py/: SensorLib.py  dataRecord.py  data_generator.py  data_processing.py  dataset.py  emager_redis.py  live_64_channel.py  live_EMAGER.py  live_TEMPORAL.py  majority_vote.py  majority_voting.py  realtime_GUI.py  realtime_prediction.py  requirements.txt  screen_guided_training.py  streamers.py  transforms.py  utils.py  visualize.py
emager_py/AI/: getData.py  trainFullModel.py  transfer_learning.py
emager_py/communication/: ble_client.py  smart_hand_control.py  zeus_control.py
emager_py/control/: ble_client.py  gesture_decoder.py  smart_hand_control.py  zeus_control.py
emager_py/data/: data_generator.py  data_processing.py  data_simulator.py  dataset.py  emager_redis.py  quantization.py  transforms.py
emager_py/data_processings/: data_generator.py  data_processing.py  dataset.py  quantization.py  streamers.py  transforms.py
emager_py/finn/: add_finn_board.py  build_dataflow.py  custom_build_steps.py  custom_make_zynq_proj.py  model_transformations.py  model_validation.py  remote_operations.py
emager_py/simulator/: data_simulator.py  gesture_simulator.py  virtual_port.py
emager_py/torch/: dataset.py  datasets.py  losses.py  models.py  utils.py
emager_py/utils/: find_usb.py  gestures_json.py  majority_vote.py  quantization.py  screen_guided_training.py  transforms.py  visualize.py
emager_py/visualisation/: color_matrix.py  dataRecord.py  live_64_channel.py  (+5 more)
examples/: dataset_recording.py  get_emager_data.py  get_triplet_data.py  gui_realtime_model.py  gui_test.py  libemg_realtime_control.py  libemg_realtime_prediction.py  libemg_sgt.py  libemg_train_cnn.py  libemg_visualize.py  live_64_chanel_plot.py  live_matrix.py  majority_vote.py  redis_processing_test.py  redis_remote_operations.py  redis_streamer.py  torch_cnn.py  torch_model.py  virtual_serial_streamer.py  virtual_tcp_streamer.py  zeus_control_test.py
exemples/: GUI_realtime_model.py  GUI_test.py  dataset_recording.py  dataset_recording_V2.py  get_emager_data.py  live_64_chanel_plot.py  live_matrix.py  processing_test.py  redis_processing_test.py  redis_streamer.py  virtual_serial_streamer.py  virtual_streamer.py  virtual_tcp_streamer.py
finn/: build_dataflow.py  custom_build_steps.py  model_transformations.py  model_validation.py
(+11 files in other folders)
