[project]
name = "emager-py"
version = "0.2.0"
description = "Library to use EMaGer dataset and HD-sEMG cuff."
authors = [{ name = "SBIOML", email = "gabrielpgagne@gmail.com" }]
dependencies = [
    "numpy>=1.24.4",
    "scipy>=1.7.3",
    "redis[hiredis]",
    "pyserial>=3.5",
    "packaging>=24.0",
    "libemg>=0.0.3",
    "pillow>=10.3.0",
    "sv-ttk>=2.6.0",
    "tensorflow>= 2.15",
    "pyqt6>=6.6.1",
    "tensorflow-io-gcs-filesystem==0.31.0",
    "bleak>=0.22.1",
]
requires-python = "<3.12,>=3.9"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
full = ["fabric>=3.2.2", "pyqtgraph", "pyqt6>=6.6.1", "torch>=2.2.1"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = []
