[project]
name = "emager-py"
version = "0.2.0"
description = "Library to use EMaGer dataset and HD-sEMG cuff."
authors = [{ name = "SBIOML", email = "gabrielpgagne@gmail.com" }]
dependencies = [
    "numpy>=1.24.4",
    "scipy>=1.9.3",
    "redis[hiredis]>=5.0.4",
    "pyserial>=3.5",
    "packaging>=24.0",
    "pillow>=10.3.0",
    "sv-ttk>=2.6.0",
    "tensorflow>= 2.15",
    "pyqtgraph>=0.13.3",
    "pyqt6>=6.6.1",
    "libemg @ file:///C:/GIT/libemg-fork",
]
requires-python = "<3.12,>=3.10"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
torch = ["torch>=2.2.1", "brevitas>=0.10.2", "lightning>=2.2.3"]
finn = ["qonnx>=0.3.0", "fabric>=3.2.2", "lightning>=2.2.4"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = []
