[project]
name = "emager-py"
version = "0.1.0"
description = "Library to use EMaGer dataset and HD-sEMG cuff."
authors = [{ name = "SBIOML", email = "gabrielpgagne@gmail.com" }]
dependencies = [
    "numpy>=1.24.4",
    "scipy>=1.9.3",
    "redis[hiredis]>=5.0.4",
    "pyserial>=3.5",
    "packaging>=24.0",
    "libemg==0.0.3",
    "pillow>=10.3.0",
    "sv-ttk>=2.6.0",
    "pyqtgraph>=0.13.3",
    "pyqt6>=6.6.1",
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
torch = ["torch==2.2.1", "brevitas>=0.10.2", "lightning==2.2.3"]
finn = ["qonnx>=0.3.0", "fabric>=3.2.2", "torch==1.13.1", "lightning"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
